--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,12 @@
-/* 
+/*
     General Styles
 */
+
+
+
+.navbar, .jumbotron {
+	background-color:rgb(81, 81, 81) !important;
+}
+.jumbotron{
+    color:white;
+}
